Resolve ruby 4.0 failure.
 Issue with Ruby 4.0 + Bundler issue on GitHub-hosted runners (it tries to touch gems in the toolcache path, which is considered insecure).
I added a CI workaround so bundler installs into the repo-local bundle path instead of shared system gems:
- Updated .github/workflows/main.yml:14 with:
  - BUNDLE_PATH: vendor/bundle
  - BUNDLE_DISABLE_SHARED_GEMS: "true"
This keeps Ruby 4.0 in the matrix while avoiding the unsafe /opt/hostedtoolcache/... reinstall path.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Ruby ${{ matrix.ruby }}, Rails ${{ matrix.rails }}
+    env:
+      BUNDLE_PATH: vendor/bundle
+      BUNDLE_DISABLE_SHARED_GEMS: "true"
     strategy:
       matrix:
         ruby:
